auth-, bogpost-, favoritesController-routes added -> next add all user-routes -> next refactoring